--- a/src/main/webapp/WEB-INF/views/confirmation.vm
+++ b/src/main/webapp/WEB-INF/views/confirmation.vm
@@ -1,3 +1,5 @@
+#set($layout = "layout/store.vm")
+
 #define($content)
 
 <div class="row">
@@ -14,7 +16,7 @@
 
 <div class="row">
 	<div class="col-xs-12 col-md-6">
-		<div class="row clearfix">
+		<div class="row">
 			<div class="col-xs-12 col-md-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
