--- a/src/main/webapp/WEB-INF/views/layout/admin.vm
+++ b/src/main/webapp/WEB-INF/views/layout/admin.vm
@@ -5,18 +5,15 @@
 	</head>
 	
 	<body>
-		#parse('/fragment/admin/navbar.vm')
-		
-		<div class="container-fluid">
-        	<div class="row-fluid">
-        		#parse('/fragment/admin/leftmenu.vm')
-        		<div id="content" class="span10">
-        			$!content
-        		</div>
-        	</div>
-        	
-        	#parse('/fragment/admin/footer.vm')
-        </div>
+		<div id="wrapper">
+			#parse('/fragment/admin/navbar.vm')
+			
+			#parse('/fragment/admin/leftmenu.vm')
+			
+			<div id="page-wrapper">
+				$!content
+			</div>
+		</div>
 		
 		#parse('/fragment/admin/foot.vm')
 	</body>
