--- a/src/main/webapp/WEB-INF/views/admin_login.vm
+++ b/src/main/webapp/WEB-INF/views/admin_login.vm
@@ -2,44 +2,29 @@
 
 #define($content)
 
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="row-fluid">
-        	<div class="span12 center login-header">
-            	<h2>Affable Bean Admin Console</h2>
-			</div>
-		</div>                
-		<div class="row-fluid">
-			<div class="well span5 center login-box">
-            	<div class="alert alert-info">
-                	Please login with your Email and Password.
-                </div>
-                <form class="form-horizontal" action="#" method="post">
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="login-panel panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title text-center">
+                	<strong>Admin Console</strong>
+                </h3>
+            </div>
+            <div class="panel-body">
+                <form role="form">
                     <fieldset>
-                        <div class="input-prepend" title="Email" data-rel="tooltip">
-							<span class="add-on">
-								<i class="icon-envelope"></i>
-							</span>
-							<input autofocus class="input-large span10" name="email" id="email" type="email" placeholder="Email"/>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
                         </div>
-                        <div class="clearfix"></div>
-                        
-                        <div class="input-prepend" title="Password" data-rel="tooltip">
-                        	<span class="add-on">
-                        		<i class="icon-lock"></i>
-                        	</span>
-                        	<input class="input-large span10" name="password" id="password" type="password" placeholder="Password"/>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Password" name="password" type="password" value="">
                         </div>
-                        <div class="clearfix"></div>
-
-                        <p class="center span5">
-                        	<button type="submit" class="btn btn-primary">Login</button>
-                        </p>
+                        <a href="#" class="btn btn-lg btn-success btn-block">Login</a>
                     </fieldset>
                 </form>
-			</div>
-		</div>
-	</div>      
+            </div>
+        </div>
+    </div>
 </div>
 
 #end
