--- a/src/main/webapp/WEB-INF/views/fragment/admin/foot.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/admin/foot.vm
@@ -2,7 +2,8 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="#springUrl('/resources/js/jquery-1.10.2.min.js')"></script>
-<script type="text/javascript" src="#springUrl('/resources/js/plugins/jquery.cookie.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/plugins/jquery.metisMenu.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/plugins/jquery.dataTables.min.js')"></script>
-<script type="text/javascript" src="#springUrl('/resources/js/charisma/bootstrap-dropdown.js')"></script>
-<script type="text/javascript" src="#springUrl('/resources/js/charisma/charisma.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/plugins/dataTables.bootstrap.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/sb-admin.js')"></script>
