--- a/src/main/webapp/WEB-INF/views/fragment/admin/leftmenu.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/admin/leftmenu.vm
@@ -1,13 +1,54 @@
-<div class="span2 main-menu-span">
-    <div class="well nav-collapse sidebar-nav">
-        <ul class="nav nav-tabs nav-stacked main-menu">
-            <li class="nav-header hidden-tablet">Sales Management</li>
-            <li><a class="ajax-link" href="#"><i class="icon-user"></i><span class="hidden-tablet"> Customer Info</span></a></li>
-            <li><a class="ajax-link" href="#"><i class="icon-edit"></i><span class="hidden-tablet"> Customer Order</span></a></li>
+<nav class="navbar-default navbar-static-side" role="navigation">
+    <div class="sidebar-collapse">
+        <ul class="nav" id="side-menu">
             
-            <li class="nav-header hidden-tablet">Store Management</li>
-            <li><a class="ajax-link" href="#"><i class="icon-barcode"></i><span class="hidden-tablet"> Product</span></a></li>
-            <li><a class="ajax-link" href="#"><i class="icon-th-large"></i><span class="hidden-tablet"> Category</span></a></li>
+            <li class="sidebar-search">
+                <div class="input-group custom-search-form">
+                    <input type="text" class="form-control" placeholder="Search...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </span>
+                </div>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Sale Management<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="#">Customer</a>
+                    </li>
+                    <li>
+                        <a href="#">Order</a>
+                    </li>
+                </ul>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa fa-shopping-cart fa-fw"></i> Store Management<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="#">Category</a>
+                    </li>
+                    <li>
+                        <a href="#">Product</a>
+                    </li>
+                </ul>
+            </li>
+            
+            <li>
+                <a href="#"><i class="fa fa-group fa-fw"></i> Administrator<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="#">Role</a>
+                    </li>
+                    <li>
+                        <a href="#">Member</a>
+                    </li>
+                </ul>
+            </li>
+            
         </ul>
     </div>
-</div>
+</nav>
