--- a/src/main/webapp/WEB-INF/views/fragment/admin/navbar.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/admin/navbar.vm
@@ -1,29 +1,26 @@
-<div class="navbar">
-	<div class="navbar-inner">
-		<div class="container-fluid">
-			
-			<a class="btn btn-navbar" data-toggle="collapse" data-target=".top-nav.nav-collapse,.sidebar-nav.nav-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</a>
-			<div class="brand" href="">
-				<img src="#springUrl('/resources/img/logo.png')" />
-				<span>Affable</span>
-			</div>
-			
-			<div class="btn-group pull-right" >
-	            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-	                <i class="icon-user"></i><span class="hidden-phone"> admin</span>
-	                <span class="caret"></span>
-	            </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Profile</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Logout</a></li>
-                </ul>
-			</div>
-	        
-		</div>
-	</div>
-</div>
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+    
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">AffableBean Admin Console</div>
+    </div>
+
+    <ul class="nav navbar-top-links navbar-right">
+    	<li class="dropdown">
+	        <a href="#">
+	            <i class="fa fa-user fa-fw"></i> Profile
+	        </a>
+	    </li>
+	    <li class="dropdown">
+	        <a href="#">
+	            <i class="fa fa-sign-out fa-fw"></i> Logout
+	        </a>
+	    </li>
+	</ul>
+
+</nav>
