--- a/src/main/webapp/WEB-INF/views/fragment/store/foot.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/store/foot.vm
@@ -3,7 +3,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 
 <script type="text/javascript" src="#springUrl('/resources/js/jquery-1.10.2.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/plugins/jquery.validate.min.js')"></script>
-<script type="text/javascript" src="#springUrl('/resources/js/plugins/additional-methods.min.js')"></script>
-<script type="text/javascript" src="#springUrl('/resources/js/affablebean/bootstrap.min.js')"></script>
-<script type="text/javascript" src="#springUrl('/resources/js/affablebean/affablebean.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/affablebean.js')"></script>
