--- a/src/main/webapp/WEB-INF/views/admin_member.vm
+++ b/src/main/webapp/WEB-INF/views/admin_member.vm
@@ -2,6 +2,45 @@
 
 #define($content)
 
-<h1>This Page is Constructing</h1>
+<div class="row">
+	<div class="col-lg-12">
+		<h1 class="page-header">Administrators Information</h1>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-12">
+		<div class="panel panel-default">
+
+			<div class="panel-body">
+				<div class="table-responsive">
+					<table class="table table-striped table-bordered table-hover" id="dataTables-example">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Username</th>
+								<th>Password</th>
+								<th>Status</th>
+								<th>Role</th>
+							</tr>
+						</thead>
+						<tbody>
+						#foreach($member in $memberList)
+							<tr class="odd gradeX">
+								<td>${member.name}</td>
+								<td>${member.username}</td>
+								<td>${member.password}</td>
+								<td>${member.status}</td>
+								<td>${member.role.name}</td>
+							</tr>
+						#end
+						</tbody>
+					</table>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+</div>
 
 #end
