fix bug: admin_member show up (hibernate nested lazy load error)

--- a/src/main/webapp/WEB-INF/views/admin_member.vm
+++ b/src/main/webapp/WEB-INF/views/admin_member.vm
@@ -31,7 +31,7 @@
 								<td>${member.username}</td>
 								<td>${member.password}</td>
 								<td>${member.status}</td>
-								<td>${member.role.name}</td>
+								<td>${member.role.id}</td>
 							</tr>
 						#end
 						</tbody>
