--- a/src/main/webapp/WEB-INF/velocity/views/store/fragment/foot.vm
+++ b/src/main/webapp/WEB-INF/velocity/views/store/fragment/foot.vm
@@ -5,4 +5,5 @@
 <script type="text/javascript" src="#springUrl('/resources/js/jquery-1.10.2.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/plugins/jquery.validate.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/plugins/jquery.form.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/affablebean.js')"></script>
