--- a/src/main/webapp/WEB-INF/velocity/views/store/checkout.vm
+++ b/src/main/webapp/WEB-INF/velocity/views/store/checkout.vm
@@ -77,7 +77,7 @@
 				
 				<div id="member" class="tab-pane fade in active">
 					<div id="valid-member"></div>
-	          		<form id="form-member" action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
+	          		<form id="purchase-member" action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
 	          			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 	          			<div class="form-group">
 	          				<label class="col-sm-2 control-label">Email</label>
@@ -95,7 +95,7 @@
 	        	
 	        	<div id="guest" class="tab-pane fade">
 	        		<div id="valid-guest"></div>
-	          		<form id="form-guest" action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
+	          		<form id="purchase-guest" action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
 	          			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
