--- a/src/main/webapp/WEB-INF/velocity/store/template/navbar.vm
+++ b/src/main/webapp/WEB-INF/velocity/store/template/navbar.vm
@@ -25,7 +25,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Languages<strong class="caret"></strong></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">English</a></li>
-                        <li><a href="#">Espanõl</a></li>
+                        <li><a href="#">Français</a></li>
                     </ul>
                 </li>
             </ul>
