change *.vm views to *.html: store/category

--- a/src/main/webapp/WEB-INF/views/store/home.html
+++ b/src/main/webapp/WEB-INF/views/store/home.html
@@ -31,9 +31,8 @@
 								<img class="img-responsive" th:src="@{|/resources/upload/products/${category.name}.jpg|}" />
 							</a>
 							<div class="caption">
-								<h4 th:text="${#strings.toUpperCase(category.name)}">Category Name</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-									sed do eiusmod tempor incididunt.</p>
+								<h4 th:text="${#strings.toUpperCase(category.name)}"></h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 							</div>
 						</div>
 					</div>
