--- a/src/main/webapp/WEB-INF/views/front_store/category.html
+++ b/src/main/webapp/WEB-INF/views/front_store/category.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	layout:decorator="store/layouts/default">
+	layout:decorator="layouts/default">
 <body>
 	<div class="container" layout:fragment="content">
 		<div class="row">
