branch off, few small tweaks before changing repository layer

--- a/src/main/webapp/WEB-INF/views/layouts/admin_console.html
+++ b/src/main/webapp/WEB-INF/views/layouts/admin_console.html
@@ -38,11 +38,13 @@
 				</button>
 				<div class="navbar-brand">AffableBean Admin Console</div>
 			</div>
-			<ul class="nav navbar-top-links navbar-right">
-				<li class="dropdown">
-					<a th:href="@{/admin/logout}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-				</li>
-			</ul>
+			<form id="f_logout" method="POST" th:action="@{/admin/logout}">
+				<ul class="nav navbar-top-links navbar-right">
+					<li class="dropdown">
+						<a><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+					</li>
+				</ul>
+			</form>
 		</nav>
 
 		<nav class="navbar-default navbar-static-side" role="navigation">
