--- a/src/main/webapp/WEB-INF/views/layouts/front_store.html
+++ b/src/main/webapp/WEB-INF/views/layouts/front_store.html
@@ -6,17 +6,17 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="Netbeans e-commerce tutorial: Spring Velocity Bootstrap" />
+	<meta name="description" content="Netbeans e-commerce tutorial: Spring Thymeleaf Bootstrap" />
 	<meta name="author" content="sunshine55 - a gist of github" />
 	
-	<link th:href="@{/resources/velocity/css/bootstrap.min.css}" rel="stylesheet" />
-	<link th:href="@{/resources/velocity/css/affablebean.css}" rel="stylesheet" />
+	<link th:href="@{/resources/css/bootstrap.min.css}" rel="stylesheet" />
+	<link th:href="@{/resources/css/affablebean.css}" rel="stylesheet" />
 	
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/resources/velocity/img/apple-touch-icon-144-precomposed.png}" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" th:href="@{/resources/velocity/img/apple-touch-icon-114-precomposed.png}" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/resources/velocity/img/apple-touch-icon-72-precomposed.png}" />
-	<link rel="apple-touch-icon-precomposed" th:href="@{/resources/velocity/img/apple-touch-icon-57-precomposed.png}" />
-	<link rel="shortcut icon" th:href="@{/resources/velocity/img/favicon.png}" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/resources/img/apple-touch-icon-144-precomposed.png}" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" th:href="@{/resources/img/apple-touch-icon-114-precomposed.png}" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/resources/img/apple-touch-icon-72-precomposed.png}" />
+	<link rel="apple-touch-icon-precomposed" th:href="@{/resources/img/apple-touch-icon-57-precomposed.png}" />
+	<link rel="shortcut icon" th:href="@{/resources/img/favicon.png}" />
 	
 	<title>Affable Spring Bean</title>
 </head>
@@ -63,10 +63,10 @@
 		</div>
 	</div>
 	
-	<script type="text/javascript" th:src="@{/resources/velocity/js/jquery-1.10.2.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/velocity/js/bootstrap.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/velocity/js/plugins/jquery.validate.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/velocity/js/plugins/jquery.form.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/velocity/js/affablebean.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/jquery-1.10.2.min.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/bootstrap.min.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/plugins/jquery.validate.min.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/plugins/jquery.form.min.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/affablebean.js}"></script>
 </body>
 </html>
